ncc/testsuite/negative/poly-local-deep-fix.n
// bug 657
def Sort[T](lst)
{
  | head :: tail => [head] + Sort (tail) // E: subtype
  | [] => [] : list[T] // E: subtype
}

_ = Sort([1]);


